# pkg/handler/list.go
@@ -74,18 +74,19 @@ func (h *Handler) getAllLists(c *gin.Context) {
 	c.JSON(http.StatusOK, getAllListsResponse{Data: lists})
 }
 
-// @Summary Get List By Id
+// @Summary Get List By ID
 // @Security ApiKeyAuth
 // @Tags lists
 // @Description get list by id
 // @ID get-list-by-id
 // @Accept  json
 // @Produce  json
+// @Param id path int true "List ID"
 // @Success 200 {object} todo.TodoList
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
-// @Router /api/lists/:id [get]
+// @Router /api/lists/{id} [get]
 func (h *Handler) getListById(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -107,6 +108,20 @@ func (h *Handler) getListById(c *gin.Context) {
 	c.JSON(http.StatusOK, list)
 }
 
+// @Summary Update todo list
+// @Security ApiKeyAuth
+// @Tags lists
+// @Description update todo list
+// @ID update-list
+// @Accept  json
+// @Produce  json
+// @Param input body todo.UpdateListInput true "updated fields"
+// @Param id path int true "List ID"
+// @Success 200 {object} statusResponse
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/lists/{id} [put]
 func (h *Handler) updateList(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -132,6 +147,19 @@ func (h *Handler) updateList(c *gin.Context) {
 	c.JSON(http.StatusOK, statusResponse{Status: "ok"})
 }
 
+// @Summary Delete todo list
+// @Security ApiKeyAuth
+// @Tags lists
+// @Description delete todo list
+// @ID delete-list
+// @Accept  json
+// @Produce  json
+// @Param id path int true "List ID"
+// @Success 200 {object} statusResponse
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/lists/{id} [delete]
 func (h *Handler) deleteList(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
